--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sgds
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+
+app.secret-key = WXIeT+NSgZurQ8G6P06jCJZqiiAdgxYtWyKcHqLL7Ts=
+app.expiration-time = 86400000
