--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=optimisation-trajet-dechets
 
+
 spring.datasource.url=jdbc:mysql://localhost:3306/sgds
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 app.secret-key = WXIeT+NSgZurQ8G6P06jCJZqiiAdgxYtWyKcHqLL7Ts=
 app.expiration-time = 86400000
+
