Optimisation de trajet réussi avec succès

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 app.secret-key = WXIeT+NSgZurQ8G6P06jCJZqiiAdgxYtWyKcHqLL7Ts=
 app.expiration-time = 86400000
 
+graphhopper.api.key=c29b3c46-d77c-4201-97aa-1500167c6d54
+graphhopper.base.url=https://graphhopper.com/api/1/route
