--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.1</version>
+		<version>3.4.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sgds</groupId>
@@ -27,9 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>23</java.version>
-		<maven.compiler.processors>com.sun.tools.javac.processing.JavacProcessing</maven.compiler.processors>
-		<maven.compiler.proc>full</maven.compiler.proc>
+		<java.version>21</java.version> <!-- ou 17 -->
 	</properties>
 	
 	<dependencies>
@@ -48,16 +46,15 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-			<!-- <scope>runtime</scope>
-			<optional>true</optional> -->
+			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
-<!-- 
+		<!-- 
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency> -->
 
- -->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
@@ -114,14 +111,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
+				<!-- <configuration>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
-				</configuration>
+				</configuration> -->
 			</plugin>
 		</plugins>
 	</build>
